--- a/GektviWpfToolkit.Tests.DataGridGK/MainWindow.xaml
+++ b/GektviWpfToolkit.Tests.DataGridGK/MainWindow.xaml
@@ -1,4 +1,4 @@
-﻿<ui:UiWindow
+﻿<ui:FluentWindow
     x:Class="GektviWpfToolkit.Tests.DataGridGK.MainWindow"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -7,30 +7,48 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
     xmlns:tk="clr-namespace:GeKtviWpfToolkit.Controls;assembly=GeKtviWpfToolkit"
+    mc:Ignorable="d"
+    WindowBackdropType="Mica"
     x:Name="Window"
     Title="MainWindow"
     Width="800"
     Height="450"
-    ExtendsContentIntoTitleBar="True"
-    mc:Ignorable="d">
-    <Grid>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="32" />
-            <RowDefinition Height="*" />
-        </Grid.RowDefinitions>
-        <ui:TitleBar
-            x:Name="TitleBar"
-            Grid.Row="0"
-            Height="32" />
-        <Grid Grid.Row="0">
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="5"/>
-                <ColumnDefinition Width="*"/>
-                <ColumnDefinition Width="50"/>
-            </Grid.ColumnDefinitions>
-            <ui:Button Grid.Column="1" Icon="Accessibility20"/>
-        <TextBlock Grid.ColumnSpan="99"  HorizontalAlignment="Center" VerticalAlignment="Center">asdf</TextBlock>
+    ExtendsContentIntoTitleBar="True">
+    
+        <Grid>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="32" />
+                <RowDefinition Height="*" />
+
+            </Grid.RowDefinitions>
+            <ui:TitleBar
+                x:Name="TitleBar"
+                Grid.Row="0"
+                Height="32" />
+            <Grid Grid.Row="0">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="5"/>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="50"/>
+                </Grid.ColumnDefinitions>
+                <ui:Button Grid.Column="1" Icon="Accessibility20"/>
+            <TextBlock Grid.ColumnSpan="99"  HorizontalAlignment="Center" VerticalAlignment="Center">asdf</TextBlock>
+            </Grid>
+        <ScrollViewer CanContentScroll="True" Grid.Row="1">
+            <Grid>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="*" />
+                    <RowDefinition Height="750" />
+                    <RowDefinition Height="500" />
+                </Grid.RowDefinitions>
+                <TextBox Grid.Row="0" Visibility="Visible" Margin="10"/>
+
+                <tk:DataGridGK Grid.Row="1" ItemsSource="{Binding Value, UpdateSourceTrigger=PropertyChanged}" x:Name="DataGridGK1" AllowDrop="True" EnableRowVirtualization="True" ScrollViewer.CanContentScroll="True">
+                </tk:DataGridGK>
+
+                <tk:DataGridGK Grid.Row="2" ItemsSource="{Binding Value, UpdateSourceTrigger=PropertyChanged}" x:Name="DataGridGK2" AllowDrop="True" EnableRowVirtualization="True" SelectionUnit="CellOrRowHeader" SelectionMode="Extended">
+                </tk:DataGridGK>
+            </Grid>
+            </ScrollViewer>
         </Grid>
-        <tk:DataGridGK Grid.Row="1" x:Name="DataGridGK"/>
-    </Grid>
-</ui:UiWindow>
+</ui:FluentWindow>
