--- a/GektviWpfToolkit.Tests.DataGridGK/MainWindow.xaml
+++ b/GektviWpfToolkit.Tests.DataGridGK/MainWindow.xaml
@@ -1,55 +1,74 @@
-﻿<ui:FluentWindow
+﻿<ui:UiWindow
     x:Class="GektviWpfToolkit.Tests.DataGridGK.MainWindow"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:local="clr-namespace:GektviWpfToolkit.Tests.DataGridGK"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
     xmlns:tk="clr-namespace:GeKtviWpfToolkit.Controls;assembly=GeKtviWpfToolkit"
-    mc:Ignorable="d"
-    WindowBackdropType="Mica"
+    xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
     x:Name="Window"
     Title="MainWindow"
     Width="800"
     Height="450"
     ExtendsContentIntoTitleBar="True"
-    >
-    
-        <Grid>
-            <Grid.RowDefinitions>
-                <RowDefinition Height="32" />
-                <RowDefinition Height="*" />
+    WindowBackdropType="Mica"
+    mc:Ignorable="d">
 
-            </Grid.RowDefinitions>
-            <ui:TitleBar
-                x:Name="TitleBar"
-                Grid.Row="0"
-                Height="32" />
-            <Grid Grid.Row="0">
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="5"/>
-                    <ColumnDefinition Width="*"/>
-                    <ColumnDefinition Width="50"/>
-                </Grid.ColumnDefinitions>
-                <ui:Button Grid.Column="1" Icon="Accessibility20"/>
-            <TextBlock Grid.ColumnSpan="99"  HorizontalAlignment="Center" VerticalAlignment="Center">asdf</TextBlock>
-            </Grid>
-        <ScrollViewer CanContentScroll="True" Grid.Row="1">
+    <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="32" />
+            <RowDefinition Height="*" />
+
+        </Grid.RowDefinitions>
+        <ui:TitleBar
+            x:Name="TitleBar"
+            Grid.Row="0"
+            Height="32" />
+        <Grid Grid.Row="0">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="0" />
+                <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="50" />
+            </Grid.ColumnDefinitions>
+            <ui:Button Grid.Column="1" Icon="ArrowAutofitDown20" VerticalAlignment="Center" FontSize="16" Margin="1"/>
+            <TextBlock
+                Grid.ColumnSpan="99"
+                HorizontalAlignment="Center"
+                VerticalAlignment="Center">
+                asdf
+            </TextBlock>
+        </Grid>
+        <ScrollViewer Grid.Row="1" CanContentScroll="True">
             <Grid MouseLeftButtonDown="DataGridGK1_MouseDown">
                 <Grid.RowDefinitions>
                     <RowDefinition Height="*" />
                     <RowDefinition Height="750" />
                     <RowDefinition Height="500" />
                 </Grid.RowDefinitions>
-                <TextBox Grid.Row="0" Visibility="Visible" Margin="10"/>
+                <TextBox
+                    Grid.Row="0"
+                    Margin="10"
+                    Visibility="Visible" />
 
-                <tk:DataGridGK  Grid.Row="1" ItemsSource="{Binding Value, UpdateSourceTrigger=PropertyChanged}" x:Name="DataGridGK1" AllowDrop="True" EnableRowVirtualization="True" ScrollViewer.CanContentScroll="True">
-                </tk:DataGridGK>
+                <tk:DataGridGK
+                    x:Name="DataGridGK1"
+                    Grid.Row="1"
+                    AllowDrop="True"
+                    EnableRowVirtualization="True"
+                    ItemsSource="{Binding Value, UpdateSourceTrigger=PropertyChanged}"
+                    ScrollViewer.CanContentScroll="True" />
 
-                <tk:DataGridGK Grid.Row="2" ItemsSource="{Binding Value, UpdateSourceTrigger=PropertyChanged}" x:Name="DataGridGK2" AllowDrop="True" EnableRowVirtualization="True" SelectionUnit="CellOrRowHeader" SelectionMode="Extended" CanUserAddRows="True">
-                </tk:DataGridGK>
+                <tk:DataGridGK
+                    x:Name="DataGridGK2"
+                    Grid.Row="2"
+                    AllowDrop="True"
+                    CanUserAddRows="True"
+                    EnableRowVirtualization="True"
+                    ItemsSource="{Binding Value, UpdateSourceTrigger=PropertyChanged}"
+                    SelectionMode="Extended"
+                    SelectionUnit="CellOrRowHeader" />
             </Grid>
-            </ScrollViewer>
-        </Grid>
-</ui:FluentWindow>
+        </ScrollViewer>
+    </Grid>
+</ui:UiWindow>
