DataGrid unselect on ESC

--- a/GeKtviWpfToolkit/Styles/DataGridGKStyle.xaml
+++ b/GeKtviWpfToolkit/Styles/DataGridGKStyle.xaml
@@ -90,7 +90,7 @@
 
     <!--#region DataGridGKStyle-->
 
-    <Style TargetType="tk:DataGridGK">
+    <Style x:Name="DefaultDataGridStyle" TargetType="tk:DataGridGK">
         <Setter Property="OverridesDefaultStyle" Value="True" />
         <Setter Property="ColumnHeaderStyle" Value="{StaticResource DefaultDataGridColumnHeaderStyle}" />
         <Setter Property="RowHeaderStyle" Value="{StaticResource DefaultDataGridRowHeaderStyle}" />
@@ -129,6 +129,7 @@
         <Setter Property="ScrollViewer.PanningMode" Value="Both" />
         <Setter Property="Stylus.IsFlicksEnabled" Value="False" />
         <Setter Property="Border.CornerRadius" Value="{DynamicResource ControlCornerRadius}" />
+        <Setter Property="HorizontalScrollBarVisibility" Value="Auto" />
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="DataGrid">
@@ -198,7 +199,15 @@
                                             Visibility="{TemplateBinding ComputedVerticalScrollBarVisibility}"
                                             Value="{TemplateBinding VerticalOffset}" />
 
-                                        <Grid Grid.Row="2" Grid.Column="1">
+                                        <ScrollBar
+                                            Grid.Row="2" Grid.Column="1"
+                                                x:Name="PART_HorizontalScrollBar"
+                                                Maximum="{TemplateBinding ScrollableWidth}"
+                                                Orientation="Horizontal"
+                                                ViewportSize="{TemplateBinding ViewportWidth}"
+                                                Visibility="{TemplateBinding ComputedHorizontalScrollBarVisibility}"
+                                                Value="{TemplateBinding HorizontalOffset}" />
+                                        <!--<Grid x:Name ="dfgsdfgdsfg"  Height="Auto" Grid.Row="2" Grid.Column="1">
                                             <Grid.ColumnDefinitions>
                                                 <ColumnDefinition Width="{Binding NonFrozenColumnsViewportHorizontalOffset, RelativeSource={RelativeSource AncestorType={x:Type DataGrid}}}" />
                                                 <ColumnDefinition Width="*" />
@@ -210,8 +219,8 @@
                                                 Orientation="Horizontal"
                                                 ViewportSize="{TemplateBinding ViewportWidth}"
                                                 Visibility="{TemplateBinding ComputedHorizontalScrollBarVisibility}"
-                                                Value="{TemplateBinding HorizontalOffset}" />
-                                        </Grid>
+                                                Value="{TemplateBinding HorizontalOffset}" />-->
+                                        <!--</Grid>-->
                                     </Grid>
                                 </ControlTemplate>
                             </ScrollViewer.Template>
@@ -297,7 +306,7 @@
 
     <!--#endregion-->
 
-    <!--#region DataGridRowStyle-->
+    <!--#region DefaultDataGridRowStyle-->
 
     <Style x:Key="DefaultDataGridRowStyle" TargetType="{x:Type DataGridRow}">
         <Setter Property="Background" Value="{DynamicResource ControlFillColorDefaultBrush}" />
