--- a/GeKtviWpfToolkit/Styles/Dialog.xaml
+++ b/GeKtviWpfToolkit/Styles/Dialog.xaml
@@ -1,7 +1,8 @@
 ﻿<ResourceDictionary
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml">
+    xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
+    xmlns:sys="clr-namespace:System;assembly=mscorlib">
 
     <CornerRadius x:Key="DialogFooterCornerRadius">8</CornerRadius>
 
@@ -14,6 +15,8 @@
         <Setter Property="Border.CornerRadius" Value="{DynamicResource PopupCornerRadius}" />
         <Setter Property="SnapsToDevicePixels" Value="True" />
         <Setter Property="OverridesDefaultStyle" Value="True" />
+        <Setter Property="DialogHeight" Value="{x:Static sys:Double.MaxValue}" />
+        <Setter Property="DialogWidth" Value="{x:Static sys:Double.MaxValue}" />
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type ui:Dialog}">
@@ -85,7 +88,7 @@
                                     <Grid>
                                         <Grid
                                             x:Name="FooterButtonsGrid"
-                                            Margin="24"
+                                            Margin="10"
                                             Visibility="Collapsed">
                                             <Grid.ColumnDefinitions>
                                                 <ColumnDefinition Width="*" />
