--- a/GeKtviWpfToolkit/Styles/DataGridGKStyle.xaml
+++ b/GeKtviWpfToolkit/Styles/DataGridGKStyle.xaml
@@ -208,7 +208,7 @@
                                             ViewportSize="{TemplateBinding ViewportWidth}"
                                             Visibility="{TemplateBinding ComputedHorizontalScrollBarVisibility}"
                                             Value="{TemplateBinding HorizontalOffset}" />
-                                        <!--<Grid x:Name ="dfgsdfgdsfg"  Height="Auto" Grid.Row="2" Grid.Column="1">
+                                        <!--<Grid Height="Auto" Grid.Row="2" Grid.Column="1">
                                             <Grid.ColumnDefinitions>
                                                 <ColumnDefinition Width="{Binding NonFrozenColumnsViewportHorizontalOffset, RelativeSource={RelativeSource AncestorType={x:Type DataGrid}}}" />
                                                 <ColumnDefinition Width="*" />
@@ -220,8 +220,8 @@
                                                 Orientation="Horizontal"
                                                 ViewportSize="{TemplateBinding ViewportWidth}"
                                                 Visibility="{TemplateBinding ComputedHorizontalScrollBarVisibility}"
-                                                Value="{TemplateBinding HorizontalOffset}" />-->
-                                        <!--</Grid>-->
+                                                Value="{TemplateBinding HorizontalOffset}" />
+                                        </Grid>-->
                                     </Grid>
                                 </ControlTemplate>
                             </ScrollViewer.Template>
