--- a/GektviWpfToolkit.Tests.DataGridGK/MainWindow.xaml
+++ b/GektviWpfToolkit.Tests.DataGridGK/MainWindow.xaml
@@ -16,6 +16,9 @@
     WindowBackdropType="Mica"
     mc:Ignorable="d">
 
+    <ui:UiWindow.Resources>
+        <BooleanToVisibilityConverter x:Key="BoolToVis"/>
+    </ui:UiWindow.Resources>
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="32" />
@@ -25,18 +28,25 @@
         <ui:TitleBar
             x:Name="TitleBar"
             Grid.Row="0"
-            Height="32" />
+            Height="30" />
         <Grid Grid.Row="0">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="0" />
-                <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="35" />
+                <ColumnDefinition />
                 <ColumnDefinition Width="50" />
             </Grid.ColumnDefinitions>
-            <ui:Button Grid.Column="1" Icon="ArrowAutofitDown20" VerticalAlignment="Center" FontSize="16" Margin="1"/>
+            <ui:Button Grid.Column="1" Style="{StaticResource TitleBarUiButtonStyle}" Icon="ArrowAutofitDown20" HorizontalAlignment="Center" Margin="0,2,0,2" Width="30" />
+            <StackPanel Grid.Column="2" Orientation="Horizontal">
+                <ui:Button Style="{StaticResource TitleBarUiButtonStyle}" Icon="TextDirectionRotate270Right20" />
+                <ui:Button Style="{StaticResource TitleBarUiButtonStyle}" Icon="TextFirstLine24" Appearance="Primary"/>
+                <ui:Button Style="{StaticResource TitleBarUiButtonStyle}" Icon="ArrowCircleUp24" Appearance="Info"/>
+                <ui:Button Visibility="{Binding ElementName=CheckBox1, Path=IsChecked, Converter={StaticResource BoolToVis}, UpdateSourceTrigger=PropertyChanged}" Style="{StaticResource TitleBarUiButtonStyle}" Icon="ArrowCurveDownRight20" Appearance="Caution"/>
+                <CheckBox x:Name="CheckBox1"/>
+            </StackPanel>
             <TextBlock
-                Grid.ColumnSpan="99"
                 HorizontalAlignment="Center"
-                VerticalAlignment="Center">
+                VerticalAlignment="Center" Grid.Column="2" Height="16" Width="22">
                 asdf
             </TextBlock>
         </Grid>
