--- a/GeKtvi.Toolkit.AvaloniaKit.Tests.App/Views/MainView.axaml
+++ b/GeKtvi.Toolkit.AvaloniaKit.Tests.App/Views/MainView.axaml
@@ -5,6 +5,8 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:vm="clr-namespace:GeKtvi.Toolkit.AvaloniaKit.Tests.App.ViewModels"
+    xmlns:v="clr-namespace:GeKtvi.Toolkit.AvaloniaKit.Tests.App.Views"
+    xmlns:tk="clr-namespace:GeKtvi.Toolkit.AvaloniaKit.DataTemplates;assembly=GeKtvi.Toolkit.AvaloniaKit"
     d:DesignHeight="450"
     d:DesignWidth="800"
     x:DataType="vm:MainViewModel"
@@ -17,16 +19,20 @@
         <vm:MainViewModel />
     </Design.DataContext>
     <Grid ColumnDefinitions="* Auto">
-      <Border Grid.Column="0" Background="Red">
-        <Button Background="Bisque" HorizontalAlignment="Stretch" VerticalAlignment="Stretch"/>
-      </Border>
-      <Border Grid.Column="1" Background="AliceBlue">
-        <Border.Styles>
-          <Style Selector="Button">
-            <Setter Property="Width" Value="80"/>
-          </Style>
-        </Border.Styles>
-        <Button Background="Bisque"/>
-      </Border>
+        <Border Grid.Column="1" Background="AliceBlue">
+            <Border.Styles>
+                <Style Selector="Button">
+                    <Setter Property="Width" Value="80" />
+                </Style>
+            </Border.Styles>
+            <Button Background="Bisque" />
+        </Border>
+		<ListBox Grid.Column="0" ItemsSource="{Binding List}">
+			<ListBox.ItemTemplate>
+				<tk:PoolingDataTemplate>
+				    <v:LongTimeCreatingControl/>
+				</tk:PoolingDataTemplate>
+			</ListBox.ItemTemplate>
+		</ListBox>
     </Grid>
 </UserControl>
